@@ -1,25 +1,24 @@
 /*
-  Header for the 'tol' library by Claude SIMON (csimon@epeios.org)
-  Copyright (C) 2000-2002 Claude SIMON (csimon@epeios.org) 
+	Header for the 'tol' library by Claude SIMON (csimon@epeios.org)
+	Copyright (C) 2000-2002  Claude SIMON (csimon@epeios.org).
 
-  This file is part of the Epeios (http://epeios.org/) project.
-  
+	This file is part of the Epeios (http://epeios.org/) project.
 
-  This library is free software; you can redistribute it and/or
-  modify it under the terms of the GNU General Public License
-  as published by the Free Software Foundation; either version 2
-  of the License, or (at your option) any later version.
+	This library is free software; you can redistribute it and/or
+	modify it under the terms of the GNU General Public License
+	as published by the Free Software Foundation; either version 2
+	of the License, or (at your option) any later version.
  
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
 
-  You should have received a copy of the GNU General Public License
-  along with this program; if not, go to http://www.fsf.org/
-  or write to the:
+	You should have received a copy of the GNU General Public License
+	along with this program; if not, go to http://www.fsf.org/
+	or write to the:
   
-                        Free Software Foundation, Inc.,
+         	         Free Software Foundation, Inc.,
            59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 
@@ -30,7 +29,7 @@
 
 #define TOL_NAME		"TOL"
 
-#define	TOL_VERSION	"$Revision$"	
+#define	TOL_VERSION	"$Revision$"
 
 #define TOL_OWNER		"Claude SIMON (csimon@epeios.org)"
 
@@ -39,7 +38,7 @@
 extern class ttr_tutor &TOLTutor;
 
 #if defined( XXX_DBG ) && !defined( TOL_NODBG )
-#define TOL_DBG 
+#define TOL_DBG
 #endif
 
 /* Begin of automatic documentation generation part. */
@@ -54,6 +53,11 @@ extern class ttr_tutor &TOLTutor;
 				  /* do not modify anything above this limit */
 				  /*			  unless specified			 */
 				  /*******************************************/
+
+/* Addendum to the automatic documentation generation part. */
+//D TOoL 
+/* End addendum to automatic documentation generation part. */
+
 /*$BEGIN$*/
 //D TOoL
 
@@ -63,7 +67,7 @@ extern class ttr_tutor &TOLTutor;
 
 #include "cpe.h"
 
-#if defined( CPE__MS ) || defined( CPE__UNIX ) || defined( CPE__BEOS )
+#if defined( CPE__MS ) || defined( CPE__UNIX ) || defined( CPE__BEOS ) || defined( CPE__CW )
 #include <sys/timeb.h>
 #else
 #error "Unknown compilation enviroment"
